--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 	},
 	"scripts": {
 		"start": "wp-scripts start",
-		"build": "wp-scripts build ",
-		"i18n": "npm run i18n:check && npm run i18n:build",
+		"build": "wp-scripts build && npm run i18n:build",
+		"i18n": "npm run i18n:build",
 		"i18n:build": "npm run i18n:pot && ./bin/build_i18n.sh",
 		"i18n:pot": "php -d xdebug.max_nesting_level=512 $(which wp) i18n make-pot --exclude=\"node_modules/,languages/,assets/\" --headers='{\"Report-Msgid-Bugs-To\":\"https://woocommerce.com/my-account/create-a-ticket/\", \"language-team\":\"LANGUAGE <EMAIL@ADDRESS>\"}' . languages/woocommerce-gateway-dummy.pot",
 		"i18n:json": "$(which wp) i18n make-json languages --no-purge",
