--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
 	"license": "GPL-3.0+",
 	"keywords": [],
 	"engines": {
-		"node": ">=6.9.4",
-		"npm": ">=1.1.0"
+		"node": "^20.12.0",
+		"npm": "^10.5.0"
 	},
 	"devDependencies": {
-		"@woocommerce/dependency-extraction-webpack-plugin": "^2.2.0",
-		"@wordpress/scripts": "^26.10.0",
+		"@woocommerce/dependency-extraction-webpack-plugin": "2.2.0",
+		"@wordpress/scripts": "^27.8.0",
 		"cross-env": "7.0.3"
 	},
 	"scripts": {
